--- a/index.html
+++ b/index.html
@@ -1,244 +1,249 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Be My Valentine ❤️</title>
+<meta charset="UTF-8">
+<title>For My Special One</title>
 
-  <!-- Confetti -->
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+<style>
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    font-family:Segoe UI, sans-serif;
+}
 
-  <style>
-    :root {
-      --pink1: #ffd6e7;
-      --pink2: #ffeef6;
-      --accent: #ff1f68;
-    }
+body{
+    min-height:100vh;
+    background:linear-gradient(135deg,#ff9a9e,#fad0c4);
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}
 
-    * { box-sizing: border-box; }
+.container{
+    width:92%;
+    max-width:900px;
+    background:white;
+    border-radius:20px;
+    padding:30px;
+    text-align:center;
+    box-shadow:0 20px 40px rgba(0,0,0,.2);
+}
 
-    body {
-      margin: 0;
-      height: 100vh;
-      background: radial-gradient(circle at top, var(--pink2), var(--pink1));
-      font-family: system-ui, sans-serif;
-      overflow: hidden;
-    }
+h1{
+    color:#ff4b6e;
+    margin-bottom:10px;
+}
 
-    /* CONFETTI CANVAS */
-    #confettiCanvas {
-      position: fixed;
-      inset: 0;
-      pointer-events: none;
-      z-index: 9999;
-    }
+.decor{
+    color:#555;
+    margin-bottom:25px;
+}
 
-    /* MAIN CARD */
-    .card {
-      position: absolute;
-      inset: 0;
-      display: grid;
-      place-items: center;
-      z-index: 5;
-    }
+.buttons{
+    display:flex;
+    gap:15px;
+    justify-content:center;
+    flex-wrap:wrap;
+    margin-bottom:25px;
+}
 
-    .inner {
-      background: rgba(255,255,255,.8);
-      backdrop-filter: blur(10px);
-      padding: 30px;
-      border-radius: 24px;
-      text-align: center;
-      box-shadow: 0 18px 60px rgba(0,0,0,.2);
-      width: min(720px, 92vw);
-    }
+button{
+    padding:12px 22px;
+    border:none;
+    border-radius:25px;
+    background:#ff4b6e;
+    color:white;
+    font-size:16px;
+    cursor:pointer;
+    transition:.3s;
+}
 
-    h1 {
-      font-size: clamp(28px, 4vw, 44px);
-      margin-bottom: 24px;
-    }
+button:hover{
+    background:#ff2f5c;
+    transform:scale(1.05);
+}
 
-    .buttons {
-      position: relative;
-      height: 120px;
-    }
+#content{
+    margin-top:10px;
+}
 
-    button {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      padding: 16px 28px;
-      font-size: 18px;
-      font-weight: 800;
-      border-radius: 999px;
-      border: none;
-      cursor: pointer;
-      box-shadow: 0 10px 24px rgba(0,0,0,.15);
-    }
+/* photos */
 
-    #yesBtn {
-      left: 20%;
-      background: var(--accent);
-      color: white;
-    }
+.gallery{
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(110px,1fr));
+    gap:12px;
+}
 
-    #noBtn {
-      left: 60%;
-      background: #e5e7eb;
-    }
+.photo{
+    height:110px;
+    border-radius:12px;
+    background:linear-gradient(135deg,#ffc3a0,#ffafbd);
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-weight:bold;
+    color:white;
+}
+.photo{
+    width:100%;
+    height:110px;
+    border-radius:12px;
+    object-fit:cover;
+}
 
-    /* FLOATING IMAGE CARDS */
-    .floating-layer {
-      position: fixed;
-      inset: 0;
-      pointer-events: none;
-      z-index: 20;
-    }
-
-    .float-card {
-      position: absolute;
-      width: 130px;
-      height: 170px;
-      background: white;
-      padding: 6px;
-      border-radius: 18px;
-      box-shadow: 0 16px 35px rgba(0,0,0,.25);
-      animation: floatUp linear forwards;
-    }
-
-    .float-card img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 14px;
-    }
-
-    @keyframes floatUp {
-      from {
-        transform: translateY(110vh) rotate(var(--rot));
-        opacity: 0;
-      }
-      10% { opacity: 1; }
-      to {
-        transform: translateY(-150vh) rotate(calc(var(--rot) * -1));
-        opacity: 0;
-      }
-    }
-
-    /* LOVE MESSAGE */
-    .love-message {
-      position: fixed;
-      inset: 0;
-      display: grid;
-      place-items: center;
-      font-size: clamp(44px, 6vw, 90px);
-      font-weight: 900;
-      color: var(--accent);
-      text-shadow: 0 14px 30px rgba(0,0,0,.3);
-      z-index: 30;
-      animation: pop 1s ease forwards;
-    }
-
-    @keyframes pop {
-      from { opacity: 0; transform: scale(.8); }
-      to { opacity: 1; transform: scale(1); }
-    }
-  </style>
+.why-list{
+    max-width:520px;
+    margin:auto;
+    text-align:left;
+    line-height:1.8;
+}
+</style>
 </head>
-
 <body>
 
-  <canvas id="confettiCanvas"></canvas>
+<div class="container">
 
-  <!-- QUESTION CARD -->
-  <div class="card" id="questionCard">
-    <div class="inner">
-      <h1>Elisha , will you be my Valentine? Forever 💘</h1>
+    <h1 class="decor-title">A Small Gift Made For You</h1>
+    <p class="decor">Some feelings are easier to show than to say.</p>
+    <p class="decor">If you like this send me a kissi real wala.</p>
 
-      <div class="buttons">
-        <button id="yesBtn">Yes</button>
-        <button id="noBtn">No</button>
-      </div>
+    <div class="buttons">
+        <button onclick="showPhotos()">Photos</button>
+        <button onclick="showFlowers()">Virtual Flower</button>
+        <button onclick="showWhy()">Why You</button>
+        <button onclick="showWhatyoulike()">what you like</button>
+        <button onclick="shownotes()">Love Letter</button>
     </div>
-    <div class="hint" id="hint">“No” vannai paudaina 😈</div>
-  </div>
 
-  <!-- FLOATING IMAGES -->
-  <div class="floating-layer" id="floatingLayer"></div>
+    <div id="content"></div>
 
-  <script>
-    const yesBtn = document.getElementById("yesBtn");
-    const noBtn = document.getElementById("noBtn");
-    const card = document.getElementById("questionCard");
-    const floatingLayer = document.getElementById("floatingLayer");
+</div>
 
-    /* CONFETTI */
-    const canvas = document.getElementById("confettiCanvas");
-    const confettiInstance = confetti.create(canvas, { resize: true });
+<script>
+function clearDecorations(){
+    document.querySelector(".decor-title").innerText="";
+    document.querySelector(".decor").innerText="";
+    document.getElementById("content").innerHTML="";
+}
 
-    function fireConfetti() {
-      const end = Date.now() + 1600;
-      (function frame() {
-        confettiInstance({
-          particleCount: 14,
-          spread: 100,
-          startVelocity: 45,
-          origin: { x: Math.random(), y: Math.random() * 0.3 }
-        });
-        if (Date.now() < end) requestAnimationFrame(frame);
-      })();
-    }
+/* ---------------- Photos ---------------- */
+function showPhotos(){
+    clearDecorations();
 
-    /* IMAGES (CHANGE THESE) */
-    const images = [
-      "img1.jpeg",
-      "img2.jpeg",
-      "img3.jpeg",
-      "img4.jpeg",
-      "img5.jpeg",
-      "img6.jpeg",
-      "img7.jpeg",
-      "img8.jpeg",
-      "img9.jpeg",
-      "img10.jpeg"
+    const mediaFiles = [
+        "vid1.mp4",
+        "vid2.mp4"
     ];
 
-    function spawnFloatingImages() {
-      images.forEach(src => {
-        const card = document.createElement("div");
-        card.className = "float-card";
-        card.style.left = Math.random() * 90 + "vw";
-        card.style.animationDuration = 7 + Math.random() * 4 + "s";
-        card.style.setProperty("--rot", (Math.random() * 40 - 20) + "deg");
+    let html = `<h2>Our Memories</h2><br><div class="gallery">`;
 
-        const img = document.createElement("img");
-        img.src = src;
-
-        card.appendChild(img);
-        floatingLayer.appendChild(card);
-      });
+    for(let i=1;i<=30;i++){
+        html += `
+      <img src="photos/img${i}.jpeg" class="photo" alt="photo ${i}">`;
     }
 
-    function showLoveMessage() {
-      const msg = document.createElement("div");
-      msg.className = "love-message";
-      msg.innerHTML = "I love you ❤️ ellu madem forever and ever";
-      document.body.appendChild(msg);
-    }
+    html += `</div>`;
+    document.getElementById("content").innerHTML = html;
+}
 
-    /* NO BUTTON ESCAPES */
-    noBtn.addEventListener("mouseover", () => {
-      noBtn.style.left = Math.random() * 70 + "%";
-      noBtn.style.top = Math.random() * 70 + "%";
-    });
+/* ---------------- Virtual Flower (your code inside iframe) ---------------- */
+function showFlowers(){
+    clearDecorations();
 
-    /* YES CLICK */
-    yesBtn.addEventListener("click", () => {
-      card.remove();              // REMOVE EVERYTHING
-      fireConfetti();
-      spawnFloatingImages();
-      setTimeout(showLoveMessage, 600);
-    });
-  </script>
+    let html = `
+        <h2 style="margin-bottom:12px;">A Flower For  My Lady</h2>
+
+        <iframe
+            src="flowers.html"
+            style="
+                width:100%;
+                height:600px;
+                border:none;
+                border-radius:18px;
+                background:black;
+            ">
+        </iframe>
+    `;
+
+    document.getElementById("content").innerHTML = html;
+}
+
+/* ---------------- What You like  ---------------- */
+function showWhatyoulike(){
+    clearDecorations();
+
+    let html = `
+        <h2>What you like must ik dherai xan but i mentioned thorai only ( Dont think that i dont know others )</h2><br>
+
+        <div class="why-list">
+            <ul>
+                <li>Pink Roses</li>
+                <li>Flowers ( Top pink and Bottom White ) </li>
+                <li>PaniPuri</li>
+                <li>Chatpate</li>
+                <li>Dairymilk ( Fav One )</li>
+                <li>kitkat ( secondary Choice )</li>
+                <li>Cute Notes</li>
+                <li>CHocolate Pudding </li>
+                <li>Strawbery with Dairymilk melted on top</li>
+                <li>ME ( this is my assumption by the way )</li>
+            </ul>
+        </div>
+    `;
+
+    document.getElementById("content").innerHTML = html;
+}
+function shownotes(){
+    clearDecorations();
+
+    let html = `
+        <h2>Why You Are Special To Me</h2><br>
+
+        <div class="why-list">
+            <p> </p>
+        </div>
+    `;
+
+    document.getElementById("content").innerHTML = html;
+}
+function showWhy(){
+    clearDecorations();
+
+    let html = `
+        <h2>Why You Are Special To Me</h2><br>
+
+        <div class="why-list">
+            <ul>
+                <li>i feel so much happier when i am with you.</li>
+                <li>Your Beauty is something I truly admire.</li>
+                <li>Your eyes.</li>
+                <li>Your eyes.</li>
+                <li>Your smile.</li>
+                <li>You make simple moments feel meaningful.</li>
+                <li>Your smile changes my whole mood.</li>
+                <li>Your kindness.</li>
+                <li>Your mood swings.</li>
+            </ul>
+        </div>
+    `;
+
+    document.getElementById("content").innerHTML = html;
+}
+function shownotes(){
+    clearDecorations();
+
+    let html = `
+        <h2>Why You Are Special To Me</h2><br>
+
+        <div class="why-list">
+            <p> Hi. So again, this is one of the last love letter that I write for You every day. My dear, nothing. Strange how you came into my life out of nowhere without logic, without reasons, and now you are a reason to stay. Like every natural beautiful thing, our beginning never made sense. And still it happened. How illogically we met, how fast we felt everything was also illogical. We were illogical, and it every moment unfolded beautifully on time. Just because we chose each other.  It was the only thing required. Nothing else ever mattered. But now logic arrived, your logic. And suddenly my heart that walked towards nothing , is now  walking towards you without overthinking. Sometimes I look back and wonder, was it really a coincidence? Or were we made from heaven. i wish we have met before i wish i was there to become your first love. but i will promise you i will never leave you, i will support you, i will give all the happiness you deserve all the respect. i will love you till the world end , until my hair become white and my body become ashes. there is nothing in this world that is gonna replace you no one , never ever. i will wait for you i will love you i will choose you in every circumstances. you are in my heart and shall always be there.</p>
+    `;
+
+    document.getElementById("content").innerHTML = html;
+}
+</script>
 
 </body>
 </html>
